[package]
name = "cgpa-calculator"
version = "1.0.1"
authors = ["Abhiraj Chaudhuri <abhirajchaudhuri@gmail.com>"]
license = "MIT"
build = "build.rs"
description = "A simple CGPA calculator built with Tauri"
repository = "https://github.com/abhie7/rust-cgpa-calculator-app.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.bundle]
name = "CGPA Calculator"
identifier = "io.abhie7.rust-cgpa-calculator-app"
